package persistence;

import entities.User;
import exceptions.DatabaseException;

import java.sql.Connection;
import java.sql.PreparedStatement;
import java.sql.ResultSet;
import java.sql.SQLException;
import java.util.ArrayList;
import java.util.List;

public class UserMapper {

    public static List<User> getAllUsers(ConnectionPool connectionPool) {

        List<User> userList = new ArrayList<>();

        String sql = "SELECT * FROM public.users";

        try(Connection connection = connectionPool.getConnection();
            PreparedStatement ps = connection.prepareStatement(sql)) {

            ResultSet rs = ps.executeQuery();
            while(rs.next()) {
                int id = rs.getInt("user_id");
                String email = rs.getString("email");
                String password = rs.getString("password");
                String role = rs.getString("role");
                double balance = rs.getDouble("balance");
                userList.add(new User(id, email, password, role, balance));
            }
        } catch(SQLException e) {
            throw new DatabaseException("DB fejl: " + e.getMessage());
        }
        return userList;
    }

    public static User getUserById(int id, ConnectionPool connectionPool) {

        User u = null;

        String sql = "SELECT * FROM public.users WHERE user_id = ?";

        try(Connection connection = connectionPool.getConnection();
            PreparedStatement ps = connection.prepareStatement(sql)) {

            ps.setInt(1, id);
            try(ResultSet rs = ps.executeQuery()) {
                if(rs.next()) {
                    String email = rs.getString("email");
                    String password = rs.getString("password");
                    String role = rs.getString("role");
                    double balance = rs.getDouble("balance");
                    u = new User(id, email, password, role, balance);
                }
            }
        } catch(SQLException e) {
            throw new DatabaseException("DB fejl: " + e.getMessage());
        }
        return u;
    }

    public static User login(String email, String password, ConnectionPool connectionPool) {

        String sql = "SELECT * FROM public.users WHERE email = ? AND password = ?";

        try(Connection connection = connectionPool.getConnection();
            PreparedStatement ps = connection.prepareStatement(sql)) {

            ps.setString(1, email);
            ps.setString(2, password);

            ResultSet rs = ps.executeQuery();
            if(rs.next()) {
                int id = rs.getInt("user_id");
                String role = rs.getString("role");
                double balance = rs.getDouble("balance");
                return new User(id, email, password, role, balance);
            } else {
                throw new DatabaseException("Fejl i login. Prøv igen");
            }
        } catch(SQLException e) {
            throw new DatabaseException("DB fejl: " + e.getMessage());
        }
    }

    public static void createUser(String email, String password, ConnectionPool connectionPool) {

        String sql = "INSERT INTO public.users (email, password, role, balance) VALUES (?, ?, ?, ?)";

        try(Connection connection = connectionPool.getConnection();
            PreparedStatement ps = connection.prepareStatement(sql)) {

            String role = "kunde";
            double balance = 500;

            ps.setString(1, email);
            ps.setString(2, password);
            ps.setString(3, role);
            ps.setDouble(4, balance);

            int rowsAffected = ps.executeUpdate();
            if(rowsAffected != 1) {
                throw new DatabaseException("Fejl ved oprettelse af ny bruger");
            }
        } catch(SQLException e) {
            String msg = "Der er sket en fejl. Prøv igen";
            if(e.getMessage().startsWith("ERROR: duplicate key value ")) {
                msg = "E-mail findes allerede. Vælg en anden";
            }
            throw new DatabaseException("DB fejl: " + e.getMessage() + " (" + msg + ")");
        }
    }
}